# i3_tools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: general.cmake
include/: format.h  nodes.hpp  outputs.hpp  utils.hpp  workspace_extra.hpp  workspace_utils.hpp  workspaces.hpp
include/detail/: lippincott.hpp
src/: exec.cpp  fix_workspaces.cpp  focus_window.cpp  focus_workspace.cpp  mv_container.cpp  mv_to_monitor.cpp  mv_to_output.cpp
